[package]
name = "stack-cli-util"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for executing action on question.xml files and in particular STACK questions in them."
license = "MIT"
authors = ["Matti Harjula <matti.harjula@aalto.fi>"]
homepage = "https://github.com/aharjula/stack-cli-util"
repository = "https://github.com/aharjula/stack-cli-util"
readme = "README.md"
keywords = ["moodle", "question", "xml", "STACK"]

[dependencies]
position_preserving_moodle_question_xml_edit = "0.1.2"
regex = "1.11.1"
stack_maxima_parser = "0.1.2"
urlencoding = "2.1.3"
